# teground-lib

./: .travis.yml  README.md  appveyor.yml
include/: tgdatafile.h  tgglobal.h  tgsegment.h  tgsegmentassertionwriter.h  tgsegmenttrack.h  tgsegmenttracktest.h  tgsequence.h  tgtestsuite.h  tgtrack.h  tgtrackheader.h  tgtracktest.h
tests/: CMakeLists.txt
tests/src/: segmenttracktestcase.cpp  segmenttracktesttestcase.cpp  sequencetestcase.cpp  testmain.cpp  testsuitedrawtestcase.cpp
